...
    
    func showDigitalTime(digitalTime: String) {
        txtDigitalTime.text = digitalTime
    }
    
    func showInvalidInputError() {
        let InvalidInputError = UIAlertController(title: "Error", message: "Please provide valid input", preferredStyle: UIAlertController.Style.alert)
        
        InvalidInputError.addAction(UIAlertAction(title: "Ok", style: .cancel, handler: nil))
        
        self.present(InvalidInputError, animated: true, completion: nil)
    }
    
...
        txtDigitalTime.inputView = timePicker
    }
    
    private func addToolBarForTimePickerView() {
        let toolbar = UIToolbar(frame:CGRect(x: 0, y: 0, width: UIScreen.main.bounds.width, height: 50))
        toolbar.items = [
            UIBarButtonItem(title: "Done", style: .plain, target: self, action: #selector(doneButtonSelected))]
        txtDigitalTime.inputAccessoryView = toolbar
    }
    
    @objc func doneButtonSelected() {
        txtDigitalTime.resignFirstResponder()
    }
...
