...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="BerlinTimeViewController" customModule="BerlinClock" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select Digital Time" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ppr-v0-z4z">
                                <rect key="frame" x="16" y="70" width="343" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="szu-5f-zVJ"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HeN-dg-d7y">
                                <rect key="frame" x="16" y="134" width="343" height="30"/>
                                <color key="backgroundColor" red="0.24194015120000001" green="0.18353623820000001" blue="0.89088277279999994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="NUj-Gb-Cwi"/>
                                </constraints>
                                <state key="normal" title="Show Berlin Time">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="showBerlinTimeClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="244-aX-0St"/>
                                </connections>
                            </button>
...
